# vitap_student_app

./: CHANGELOG.md  README.md  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/: faculty_list.json
ios/Runner/: AppDelegate.swift  Info.plist
lib/: init_dependencies.dart  init_dependencies.main.dart  main.dart  objbox.dart
lib/core/common/widget/: app_tab_bar.dart  (+1 more)
lib/core/error/: exceptions.dart  failure.dart
lib/core/models/: credentials.dart
lib/core/providers/: current_user.g.dart  developer_options_notifier.g.dart  schedule_home_widget_notifier.g.dart  theme_mode_notifier.g.dart
lib/core/services/: vtop_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
rust/: Cargo.toml
rust/src/: dryrun.rs  faculty_fetch.rs  frb_generated.rs
rust/src/api/: vtop_get_client.rs
rust/src/api/vtop/: session_manager.rs  vtop_config.rs  vtop_errors.rs
rust/src/api/vtop/client/: academic.rs  auth.rs  biometric.rs  builder.rs  course_page.rs  faculty.rs  hostel.rs  payment.rs  profile.rs
rust/src/api/vtop/parser/: attendance_parser.rs  digital_assignment_parser.rs  outing_form_parser.rs  outing_response_parser.rs  pending_payments_parser.rs  profile_parser.rs  semested_id_parser.rs  timetable_parser.rs
rust/src/api/vtop/parser/faculty/: mod.rs  parseabout.rs  parsesearch.rs
rust/src/api/vtop/parser/hostel/: general_outing_parser.rs  mod.rs  weekend_outing_parser.rs
rust/src/api/vtop/types/: attendance.rs  general_outing.rs  grade_history.rs  marks.rs  weekend_outing.rs
rust/tests/: digital_assignment_parser_test.rs  outing_response_parser_test.rs  pending_payments_parser_test.rs
(+104 files in other folders)
